--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,5 +1,5 @@
 body {
-  background: $brand-color;
+  background: #b692db;
   color: $text-color;
   font-family: $font-family;
   font-size: 1.3125em;
@@ -142,7 +142,7 @@ figcaption {
 }
 
 .skip-navigation {
-  background: $brand-color;
+  background: #b692db;
   border: 1px dashed transparent;
   display: block;
   font-size: .875em;
@@ -154,7 +154,7 @@ figcaption {
   text-transform: uppercase;
   &:hover,
   &:focus {
-    background: lighten($brand-color, 2.5%);
+    background: lighten(#b692db, 2.5%);
     border-color: $text-color;
     margin-top: 0;
   }
